--- a/project-meu-cantinho/frontend/src/app/features/espacos/espaco-detail/espaco-detail.component.html
+++ b/project-meu-cantinho/frontend/src/app/features/espacos/espaco-detail/espaco-detail.component.html
@@ -34,9 +34,9 @@
 
           <div class="info-card">
             <span class="icon">💰</span>
-            <div class="info-text">
-              <span class="label">Valor da Diária</span>
-              <span class="value">R$ {{ espaco.valorDiaria | number:'1.2-2' }}</span>
+            <div class="info-item">
+              <span class="label">Valor Diária:</span>
+              <span class="value">R$ {{ espaco.precoDiaria | number:'1.2-2' }}</span>
             </div>
           </div>
 
