--- a/project-meu-cantinho/frontend/src/app/features/espacos/espacos-list/espacos-list.component.html
+++ b/project-meu-cantinho/frontend/src/app/features/espacos/espacos-list/espacos-list.component.html
@@ -34,7 +34,7 @@
               </div>
               <div class="info-item">
                 <span class="icon">💰</span>
-                <span class="value">R$ {{ espaco.valorDiaria | number:'1.2-2' }}</span>
+                <span class="value">R$ {{ espaco.precoDiaria | number:'1.2-2' }}</span>
               </div>
               <div class="info-item">
                 <span class="icon">📍</span>
